--- a/run_env/conda_env_statediff.yml
+++ b/run_env/conda_env_statediff.yml
@@ -24,9 +24,12 @@ dependencies:
   - bedtools=2.26.0
   - mpmath=0.19
   - salmon=0.9.1
+  - r-base=3.4.1
   - r-empiricalfdr.deseq2=1.0.3
   - bioconductor-deseq2=1.18.1
   - bioconductor-tximport=1.6.0
   - r-readr=1.1.1
   - r-getopt=1.20.0
   - matplotlib=2.0.2
+  - kfoots=1.0
+  - epicseg=1.0
