--- a/run_env/conda_env_statediff.yml
+++ b/run_env/conda_env_statediff.yml
@@ -15,6 +15,7 @@ dependencies:
   - numexpr=2.6.2
   - hdf5=1.8.17
   - pandas=0.20.3
+  - intervaltree=2.1.0
   - statsmodels=0.8.0
   - pytables=3.4.2
   - boost=1.64.0
@@ -33,3 +34,5 @@ dependencies:
   - matplotlib=2.0.2
   - kfoots=1.0
   - epicseg=1.0
+  - pepr=1.1.18
+  - ucsc-bedgraphtobigwig
