add tasks for random sampling and transition counts

--- a/pipeline/ppl_statediff_main.ini
+++ b/pipeline/ppl_statediff_main.ini
@@ -1,5 +1,5 @@
 [Run]
-load_path= /home/pebert/work/code/mpggit/statediff
+load_path= /home/pebert/work/code/github/project-diff-chromatin-state
 load_name= pipeline.ppl_statediff_main
 mkdir= ${EnvPaths:workdir}
 
@@ -164,6 +164,13 @@ sciddo_deep_dump_scores= sciddo.py --workers 7 --config-dump ${EnvPaths:ruffuslo
                          --support-file {{inputfile}}
                          --output {{outputfile}}
 
+# dump state transitions in DCDs
+sciddo_deep_dump_trans= sciddo.py --workers 7 --config-dump ${EnvPaths:ruffuslog} dump
+                         --data-type transitions --scoring auto
+                         --data-file {subpath[0][1]}/sciddo-data_hg38_{SEGMENT[0]}.h5
+                         --support-file {{inputfile}}
+                         --output {{outputfile}}
+
 # dump pairwise score tracks
 # just for comparison He vs Ma
 # for visualizations in paper
@@ -196,6 +203,17 @@ sciddo_deep_dump_raw_t1= sciddo.py --workers 6 --config-dump ${EnvPaths:ruffuslo
 # ============================================
 # DOWNSTREAM TOOLS - SCIDDO ANALYSIS COMPLETE
 # ============================================
+
+#
+# Sample random genomic regions as background set
+#
+
+sample_random_regions= sample_random_regions.py --num-cpu 7
+                        --input {{inputfile}}
+                        --output {{outputfile}}
+                        --chrom-sizes ${References:hg38_chromlen}
+                        --num-sets 10
+
 
 # just convenience - loading to IGV...
 # convert bedGraph to bigWig tracks
