fix add state-labels to transition dump

--- a/pipeline/ppl_statediff_main.ini
+++ b/pipeline/ppl_statediff_main.ini
@@ -166,7 +166,7 @@ sciddo_deep_dump_scores= sciddo.py --workers 7 --config-dump ${EnvPaths:ruffuslo
 
 # dump state transitions in DCDs
 sciddo_deep_dump_trans= sciddo.py --workers 7 --config-dump ${EnvPaths:ruffuslog} dump
-                         --data-type transitions --scoring auto
+                         --data-type transitions --scoring auto --add-state-labels
                          --data-file {subpath[0][1]}/sciddo-data_hg38_{SEGMENT[0]}.h5
                          --support-file {{inputfile}}
                          --output {{outputfile}}
